# vid-play

./: meson.build
src/: main.c
